[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/coin.gd" type="Script" id=1]
[ext_resource path="res://ASSETS/coin/plata0.png" type="Texture" id=2]
[ext_resource path="res://ASSETS/coin/plata3.png" type="Texture" id=3]
[ext_resource path="res://ASSETS/coin/plata4.png" type="Texture" id=4]
[ext_resource path="res://ASSETS/sounds/powerUp2.ogg" type="AudioStream" id=5]
[ext_resource path="res://ASSETS/coin/plata1.png" type="Texture" id=6]
[ext_resource path="res://ASSETS/coin/plata5.png" type="Texture" id=7]
[ext_resource path="res://ASSETS/coin/plata2.png" type="Texture" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 44.5071

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 7 ) ],
"loop": true,
"name": "spin",
"speed": 5.0
} ]

[sub_resource type="Animation" id=3]
resource_name = "bounce"
length = 0.55
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -229.509 ), Vector2( 0, -80.3764 ) ]
}

[node name="Area2D" type="Area2D"]
collision_layer = 2147483648
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "spin"
frame = 5
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/bounce = SubResource( 3 )

[node name="SoundCoinCollected" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="coin_collected" from="." to="." method="_on_Area2D_coin_collected"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
